feat: :lipstick: second Commit
second Commit Filtro

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <a href="#" class="brand"><i class='bx bxs-smile icon'></i> CampusShop</a>
         <ul class="side-menu">
             <li><a href="index.html"><i class='bx bxs-chart icon'></i> Todos los productos</a></li>
-            <li><a href="abrigos.html"><i class='bx bxs-widget icon'></i> Abrigos</a></li>
-            <li><a href="camisetas.html"><i class='bx bxs-chart icon'></i> Camisetas</a></li>
-            <li><a href="pantalones.html"><i class='bx bxs-widget icon'></i> Pantalones</a></li>
-            <li><a href="#"><i class='bx bxs-widget icon'></i> Carritos</a></li>
+            <li><a href="abrigos.html"><i class='bx bx-wind icon'></i> Abrigos</a></li>
+            <li><a href="camisetas.html"><i class='bx bx-sun icon'></i> Camisetas</a></li>
+            <li><a href="pantalones.html"><i class='bx bxs-bolt icon' ></i> Pantalones</a></li>
+            <li><a href="#"><i class='bx bx-cart icon'></i> Carritos</a></li>
         </ul>
     </section>
     <!-- SIDEBAR -->
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/abrigo1.jpg" alt="">
+                    <img src="img/camiseta1.jpg" alt="">
                     <div class="coment-card">
                         <div>
                             <p>Camisetas</p>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/abrigo1.jpg" alt="">
+                    <img src="img/pantalon1.jpg" alt="">
                     <div class="coment-card">
                         <div>
                             <p>Pantalones</p>
