--- a/pantalones.html
+++ b/pantalones.html
@@ -17,10 +17,10 @@
         <a href="#" class="brand"><i class='bx bxs-smile icon'></i> CampusShop</a>
         <ul class="side-menu">
             <li><a href="index.html"><i class='bx bxs-chart icon'></i> Todos los productos</a></li>
-            <li><a href="abrigos.html"><i class='bx bxs-widget icon'></i> Abrigos</a></li>
-            <li><a href="camisetas.html"><i class='bx bxs-chart icon'></i> Camisetas</a></li>
-            <li><a href="pantalones.html"><i class='bx bxs-widget icon'></i> Pantalones</a></li>
-            <li><a href="#"><i class='bx bxs-widget icon'></i> Carritos</a></li>
+            <li><a href="abrigos.html"><i class='bx bx-wind icon'></i> Abrigos</a></li>
+            <li><a href="camisetas.html"><i class='bx bx-sun icon'></i> Camisetas</a></li>
+            <li><a href="pantalones.html"><i class='bx bxs-bolt icon' ></i> Pantalones</a></li>
+            <li><a href="#"><i class='bx bx-cart icon'></i> Carritos</a></li>
         </ul>
     </section>
     <!-- SIDEBAR -->
@@ -30,65 +30,107 @@
         <!-- MAIN -->
         <main>
             <h1 class="title">Pantalones</h1>
-            <div class="info-data">
-                <div class="card">
-                    <img src="img/pantalon1.jpg" alt="">
-                    <div class="coment-card">
-                        <div>
-                            <p>Abrigo 01</p>
-                            <p>$ 1.000</p>
+            <div class="info">
+                <input type="checkbox" id="ver-producto">
+                <div class="info-data">
+                    <div class="card">
+                        <img src="img/pantalon1.jpg" alt="">
+                        <div class="coment-card">
+                            <div>
+                                <p>Pantalon 01</p>
+                                <p>$ 1.000</p>
+                            </div>
+                            <div class="coment-card-son">
+                                <ul class="breadcrumbs">
+                                    <li><a href="#">
+                                        <label for="ver-producto">
+                                            Ver prodcto
+                                        </label>
+                                    </a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="coment-card-son">
-                            <ul class="breadcrumbs">
-                                <li><a href="#">Agregar</a></li>
-                            </ul>
+                    </div>
+                    <div class="card">
+                        <img src="img/pantalon2.jpg" alt="">
+                        <div class="coment-card">
+                            <div>
+                                <p>Pantalon 02</p>
+                                <p>$ 2.000</p>
+                            </div>
+                            <div class="coment-card-son">
+                                <ul class="breadcrumbs">
+                                    <li><a href="#">
+                                        <label for="ver-producto">
+                                            Ver prodcto
+                                        </label>
+                                    </a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/pantalon3.jpg" alt="">
+                        <div class="coment-card">
+                            <div>
+                                <p>Pantalon 03</p>
+                                <p>$ 3.000</p>
+                            </div>
+                            <div class="coment-card-son">
+                                <ul class="breadcrumbs">
+                                    <li><a href="#">
+                                        <label for="ver-producto">
+                                            Ver prodcto
+                                        </label>
+                                    </a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/pantalon4.jpg" alt="">
+                        <div class="coment-card">
+                            <div>
+                                <p>Pantalon 04</p>
+                                <p>$ 4.000</p>
+                            </div>
+                            <div class="coment-card-son">
+                                <ul class="breadcrumbs">
+                                    <li><a href="#">
+                                        <label for="ver-producto">
+                                            Ver prodcto
+                                        </label>
+                                    </a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="img/pantalon2.jpg" alt="">
-                    <div class="coment-card">
-                        <div>
-                            <p>Abrigo 01</p>
-                            <p>$ 1.000</p>
+                <div class="info-front">
+                    <div class="card-front">
+                        <div class="image"></div>
+                        <div class="coment-card-front">
+                            <div>
+                                <p>Abrigo 01</p>
+                            </div>
+                            <div class="text-front">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, perferendis provident. Necessitatibus officia vero facilis at ea voluptatem quidem repellendus mollitia quasi in? Facilis nam veniam fugit corporis officiis modi!
+                                </p>
+                            </div>
+                            <div class="coment-card-son-front">
+                                <ul class="breadcrumbs-front">
+                                    <li><a href="abrigos.html">Regresar</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="coment-card-son">
-                            <ul class="breadcrumbs">
-                                <li><a href="#">Agregar</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/pantalon3.jpg" alt="">
-                    <div class="coment-card">
-                        <div>
-                            <p>Abrigo 03</p>
-                            <p>$ 3.000</p>
-                        </div>
-                        <div class="coment-card-son">
-                            <ul class="breadcrumbs">
-                                <li><a href="#">Agregar</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/pantalon4.jpg" alt="">
-                    <div class="coment-card">
-                        <div>
-                            <p>Abrigo 04</p>
-                            <p>$ 4.000</p>
-                        </div>
-                        <div class="coment-card-son">
-                            <ul class="breadcrumbs">
-                                <li><a href="#">Agregar</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                        <div class="preview-front">
 
+                        </div>
+                    </div>
+                </div>
             </div>
+           
         </main>
         <!-- MAIN -->
     </section>
